# ur5_moveit_project

dh_usb_control/: CMakeLists.txt  package.xml
dh_usb_control/include/dh_usb_control/: dh_usb.cpp  dh_usb.h
dh_usb_control/msg/: DHCmd.msg
dh_usb_control/src/: dh_usb_service_node.cpp
easy_handeye/docs/example_launch/: panda_realsense_eyeonbase.launch
easy_handeye/easy_handeye/launch/: calibrate.launch  franka_bringup.launch  franka_kinect_eyeonbase.launch  publish.launch  publish_kinect_ur5.launch  rviz_easy_handeye.config  ur5_kinect_calibration.launch
easy_handeye/easy_handeye/scripts/: calibrate.py  handeye_calibration_commander.py  publish.py  robot.py
easy_handeye/rqt_easy_handeye/scripts/: rqt_calibration_evaluator  rqt_calibrationmovements  rqt_easy_handeye
hm_cooperation/: CMakeLists.txt  package.xml  setup.py
hm_cooperation/launch/: hm_cooperation.launch  hm_cooperation_image.launch
hm_cooperation/msg/: Mission.msg  Observe.msg
hm_cooperation/scripts/: data_process.py  franka_client.py  hm_demo.py  manipulator_interface_node.py  mp3_client_test.py  mp3_service.py  planner_backup.py  sub_observation.py  utilis.py
hm_cooperation/scripts/data/: env_params.json  test_order_1.xlsx  (+1 more)
hm_cooperation/src/: franka_unit.cpp  image_unit.cpp
hm_cooperation/srv/: GetImg.srv  Mp3.srv  Task.srv
tf_tools/: CMakeLists.txt  package.xml
tf_tools/scripts/: tf_publish.py  tf_subscribe.py  tf_translate_service.py  tf_translate_service_01_client.py
tf_tools/srv/: Translate.srv
ur5_moveit_control/: CMakeLists.txt  package.xml
ur5_moveit_control/launch/: ts_detect_base.launch
ur5_moveit_control/scripts/: TS_api_demo.py  demo_v2.py  dh_client_test.py  kinect_cap.py  robotcontrol.py  ts_demo.py  ts_demo1.py  ts_demo_debug.py  ts_demo_src.py  ur_test.py
yolo_detection/: CMakeLists.txt  make.sh  package.xml  setup.py
yolo_detection/msg/: Object.msg
yolo_detection/scripts/: object_service.py  point_cloud_service.py  point_cloud_service_test.py  target_service_test.py
yolo_detection/src/YOLO/pick/: kinect_crop.py  pt文件说明.txt  yolo.bp  yolo.py
yolo_detection/src/YOLO/pick/models/: common.py  experimental.py  export.py  yolo.py
yolo_detection/src/YOLO/pick/utils/: _polyiou.cp38-win_amd64.exp  _polyiou.cp38-win_amd64.pyd  datasets.py  evaluation_utils.py  general.py  google_utils.py
yolo_detection/srv/: GetPoint.srv  Target.srv  Task.srv
(+39 files in other folders)
